# audiorecording

./: CMakeLists.txt
src/: audiorecorder.cpp  main.cpp
src/headers/: audio_types.h  audiorecorder.h  debug.h
